# chromium-patches

./: .gitreview  0001-use-Chromium-branding-in-more-places.patch  0002-hide-passwords.google.com-link-when-not-supported.patch  0003-Disable-data-reduction-proxy-promo.patch  0003-disable-first-run-welcome-page.patch  0004-Disable-data-reduction-proxy-promo.patch  0004-disable-seed-based-field-trials.patch  0005-disable-navigation-error-correction-by-default.patch  0005-disable-seed-based-field-trials.patch  0006-disable-contextual-search-by-default.patch  0006-disable-navigation-error-correction-by-default.patch  0007-disable-contextual-search-by-default.patch  0007-disable-network-prediction-by-default.patch  0008-disable-metrics-by-default.patch  0008-disable-network-prediction-by-default.patch  0009-disable-hyperlink-auditing-by-default.patch  0009-disable-metrics-by-default.patch  0010-disable-hyperlink-auditing-by-default.patch  0010-disable-showing-popular-sites-by-default.patch  0011-disable-article-suggestions-feature-by-default.patch  0011-disable-showing-popular-sites-by-default.patch  0012-disable-article-suggestions-feature-by-default.patch  0012-disable-prefetching-suggested-pages-by-default.patch  0012-disable-sensors-access-by-default.patch  0013-disable-background-sync-by-default.patch  0013-disable-prefetching-suggested-pages-by-default.patch  0013-disable-sensors-access-by-default.patch  0014-disable-background-sync-by-default.patch  0014-disable-payment-support-by-default.patch  0014-disable-sensors-access-by-default.patch  (+26 more)
