target_os = "android"
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "89.0.4389.105"
android_default_version_code = "438910500"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 0
blink_symbol_level = 0
fieldtrial_testing_like_official_build = true
use_official_google_api_keys = false

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

enable_remoting = false
enable_reporting = true # Build broken without this, COEP related
enable_resource_allowlist_generation = false

trichrome_certdigest = "a856485079bcb357bfbe69ba19a9ba43cd0ad9ab226752c780b6888afd48216b"

# Need to migrate to own namespace, but without losing user data
chrome_public_manifest_package = "org.chromium.chrome"
system_webview_package_name = "com.android.webview"
trichrome_library_package = "org.chromium.trichromelibrary"
